Created CategoryItems Activity
Also created a DataService to handle all the data, added item click listeners to the CategoryAdapter and CategoryItemsAdapter, created stub for DetailActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-        <activity android:name=".activities.AppInfoActivity"></activity>
+        <activity android:name=".activities.AppInfoActivity" />
+        <activity android:name=".activities.CategoryItemsActivity" />
+        <activity android:name=".activities.DetailActivity" />
     </application>
 
 </manifest>
